# fundprog-assignment14

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt
app/src/: main.c
cmake/: CompilerWarnings.cmake  ComponentMacros.cmake
components/: CMakeLists.txt
components/h2511186/: CMakeLists.txt
components/h2511186/include/h2511186/: component.h
components/h2511186/src/: component.c  frame1.ppm  frame2.ppm
components/h2511186/src/background/: background1.c  background1.ppm  background2.c  background2.ppm  background3.c  background3.ppm  background4.c  background4.ppm
components/h2511186/src/ground/: ground1.c  ground1.ppm  ground2.c  ground2.ppm  ground3.c  ground3.ppm
components/i2511030/: CMakeLists.txt
components/i2511030/include/i2511030/: component.h
components/i2511030/src/: component.c
components/i2511030/test/: example_i2511030_a.c
components/k2511070/: CMakeLists.txt
components/k2511070/include/k2511070/: component.h
components/k2511070/src/: component.c
components/k2511070/test/: example_a.c
docs/: architecture.md  getting-started.md
docs/cmake/: conventions.md
docs/components/: how-to-add.md
docs/libs/: layer.md  rgba.md
include/: rgba.h
libs/: CMakeLists.txt
libs/layer/: CMakeLists.txt
libs/layer/include/layer/: layer.h
libs/layer/src/: layer.c
libs/layer/test/: example_layer.c
libs/rgba/: CMakeLists.txt
libs/rgba/src/: rgba.c
libs/rgba/test/: test_rgba.c
output/: demo.ppm
output/examples/: 01_basic_shapes.ppm  02_outlines.ppm  03_antialiasing.ppm  04_composite.ppm  05a_original.ppm  05b_flip_h.ppm  05c_flip_v.ppm  05d_resized.ppm  05e_clipped.ppm  composite.ppm  draw_circle.ppm  draw_line.ppm  draw_polygon.ppm  draw_rect.ppm  draw_triangle.ppm  supersampled.ppm  transform_resize.ppm
output/frames/: frame_0000.ppm  frame_0001.ppm  frame_0002.ppm  frame_0003.ppm  frame_0004.ppm  frame_0005.ppm  frame_0006.ppm  frame_0007.ppm  frame_0008.ppm  frame_0009.ppm  frame_0010.ppm  frame_0011.ppm  frame_0012.ppm  frame_0013.ppm  frame_0014.ppm  frame_0015.ppm  frame_0016.ppm  frame_0017.ppm  frame_0018.ppm  frame_0019.ppm  frame_0020.ppm  frame_0021.ppm  frame_0022.ppm  frame_0023.ppm  frame_0024.ppm  frame_0025.ppm  frame_0026.ppm  frame_0027.ppm  frame_0028.ppm  frame_0029.ppm  frame_0030.ppm  frame_0031.ppm  frame_0032.ppm  frame_0033.ppm  frame_0034.ppm  frame_0035.ppm  frame_0036.ppm  frame_0037.ppm  frame_0038.ppm  frame_0039.ppm  (+261 more)
src/: CMakeLists.txt  rgba.c
src/test/: rgba.c
test/: CMakeLists.txt
