# ==============================================================================
# テストディレクトリ CMake設定
# ==============================================================================

# ------------------------------------------------------------------------------
# RGBAテスト実行ファイル
# ------------------------------------------------------------------------------
add_executable(test_rgba
    test_rgba.c
)

target_link_libraries(test_rgba PRIVATE
    rgba_lib   # ソースからライブラリをリンク
    unity      # テストフレームワーク
    m          # 数学ライブラリ
)

# Unityの設定：Double精度を有効化
target_compile_definitions(test_rgba PRIVATE
    UNITY_INCLUDE_DOUBLE
)

# 基本的な警告オプションを適用
set_basic_warnings(test_rgba)

# ------------------------------------------------------------------------------
# CTestにテストを登録
# ------------------------------------------------------------------------------
add_test(NAME test_rgba COMMAND test_rgba)
